--- a/AppAsyncStorage/package.json
+++ b/AppAsyncStorage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appdesafio",
+  "name": "apploginasyncstorage",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/stack": "^7.4.8",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/stack": "^7.4.10",
     "expo": "~54.0.10",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-native": "0.81.4"
   },
   "devDependencies": {
